auto-test/tests/chapter_18/invalid_types/extra_credit/union_initializers/static_nested_init_too_long.c

union u {
    int a;
    long b;
};
struct s {
    int tag;
    union u contents;
};

struct s my_struct = {
    10,
    {1, 2}  
};